# 40hz

./: .gitignore  README.md  audio_engine.py  config.py  control_panel.py  flash_overlay.py  main.py  platformio.ini  pyproject.toml
docs/: RESEARCH.md
src/: main.cpp
